Add global_status and fix gauges type
