# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 20170801073152) do
+ActiveRecord::Schema.define(version: 20171005214002) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -55,6 +55,7 @@ ActiveRecord::Schema.define(version: 20170801073152) do
     t.integer  "pia_id"
     t.datetime "created_at",                                 null: false
     t.datetime "updated_at",                                 null: false
+    t.integer  "global_status",                 default: 0
     t.index ["pia_id"], name: "index_evaluations_on_pia_id", using: :btree
   end
 
